cloudformation/templates/route_tables.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: 'NT548-Lab01 - Route Tables Module'

Parameters:
  ProjectName:
    Type: String
    Default: nt548-lab01

Resources:
  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Fn::ImportValue: !Sub '${ProjectName}-VpcId'
      Tags:
        - Key: Name
          Value: !Sub '${ProjectName}-public-rt'
        - Key: Type
          Value: Public

  PublicRoute:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: '0.0.0.0/0'
      GatewayId:
        Fn::ImportValue: !Sub '${ProjectName}-InternetGatewayId'

  PublicSubnetRTAssoc:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId:
        Fn::ImportValue: !Sub '${ProjectName}-PublicSubnetId'
      RouteTableId: !Ref PublicRouteTable

  PrivateRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Fn::ImportValue: !Sub '${ProjectName}-VpcId'
      Tags:
        - Key: Name
          Value: !Sub '${ProjectName}-private-rt'
        - Key: Type
          Value: Private

  PrivateRoute:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PrivateRouteTable
      DestinationCidrBlock: '0.0.0.0/0'
      NatGatewayId:
        Fn::ImportValue: !Sub '${ProjectName}-NatGatewayId'

  PrivateSubnetRTAssoc:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId:
        Fn::ImportValue: !Sub '${ProjectName}-PrivateSubnetId'
      RouteTableId: !Ref PrivateRouteTable

Outputs:
  PublicRouteTableId:
    Value: !Ref PublicRouteTable
    Export:
      Name: !Sub '${ProjectName}-PublicRouteTableId'

  PrivateRouteTableId:
    Value: !Ref PrivateRouteTable
    Export:
      Name: !Sub '${ProjectName}-PrivateRouteTableId'
